fixing nav's z-index

--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -19,6 +19,7 @@ nav {
   height: 60px;
   top: 0;
   right: 0;
+  z-index: 500;
 }
 
 .socialContacts {
